Arquivos de configuracao/4 - Ingress/ingress-geral-rotas.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: roteador-grafana
  namespace: grafana
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.lab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana 
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: roteador-argocd
  namespace: argocd    
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: argo.lab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443
